Fixing alignment of social links

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 	padding-top: 50px;
 	padding-bottom: 50px;
 	background-color: #f2f2f2;
+  text-align:center;
 }
 
 #social i {
